--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
+*{
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
 html, body {
   margin: 0;
   padding: 0;
 }
 
 body{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 canvas {
@@ -18,17 +20,15 @@ canvas {
   color:antiquewhite;
   font-size: 12px;
   letter-spacing: .1rem;
-  position: relative;
-  left: 312px;
- top: -200px;
+  position: absolute;
+  top: 20px;
+  right: 9px;
 }
 
 .slider{
-  position: relative;
-  left: 310px;
-  top: -240px;
-  height: 1px;  
-  width: 200px;
+  position: absolute;
+  right:10px;
+  top: 7px;
 }
 
 .btn{
@@ -40,7 +40,153 @@ canvas {
   color:black;
   font-weight: 700;
   letter-spacing: .1rem;
+  position: absolute;
+  top: 10px;
+  right: 100px;
+}
+
+.body{
+  background-color:antiquewhite;
+}
+
+.canvas2-cont{
   position: relative;
-  top: -227px;
-  left: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Label{
+  position: absolute;
+  top: 0pc;
+  text-align: center;
+  margin:  0 auto;
+  background-color: red;
+  width: 400px;
+}
+
+.grid-container{
+  background-color: rgb(33,42,66);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.canvas1-container{
+  position: relative;
+  width: 400px;
+  height: 225px;
+  grid-row-start: 3;
+  grid-column: 2 / 3;
+  display: flex;
+}
+
+.filler{
+  background-color: #ff6961
+  ;
+  grid-row:  1;
+  grid-column: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.title{
+  background-color: #ffb480;
+  grid-row:  1;
+  grid-column: 2;
+  width: 100%;
+  height: 100%;
+}
+
+.filler2{
+  background-color: #f8f38d;
+  grid-row:  1;
+  grid-column: 3;
+  width: 100%;
+  height: 100%;
+}
+
+.premise{
+  background-color: #42d6a4;
+  grid-row:  2;
+  grid-column: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.question{
+  background-color: #08cad1;
+  grid-row:  2;
+  grid-column: 2;
+  width: 100%;
+  height: 100%;
+}
+
+.breakdown{
+  background-color: #59adf6;
+  grid-row:  2;
+  grid-column: 3;
+  width: 100%;
+  height: 100%;
+}
+
+.grav{
+  background-color: #9d94ff;
+  grid-row:  3;
+  grid-column: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.more{
+  background-color: #c780e8;
+  grid-row:  3;
+  grid-column: 3;
+  width: 100%;
+  height: 90%;
+  text-decoration: none;
+  color: black;
+}
+
+.sim2{
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+
+}
+
+h1{
+  margin-left: 10px;
+  margin-bottom: 5px;
+  font-size: 30px;
+}
+
+h3{
+  margin-left: 10px;
+  font-size:20px;
+}
+
+span{
+  display: block;
+  margin: 10px;
+  margin-left: 5px;
+  font-size: 1.5vw;
+}
+
+.img{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img{
+  width: 500px;
+
+  height: 100%;
 }
