--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 }
 
 html, body {
-  margin: 0;
+  margin: 1px;
   padding: 0;
+  font-size: large;
 }
 
 body{
@@ -170,13 +171,6 @@ h3{
   font-size:20px;
 }
 
-span{
-  display: block;
-  margin: 10px;
-  margin-left: 5px;
-  font-size: 1.5vw;
-}
-
 .img{
   width: 100%;
   height: 500px;
@@ -189,4 +183,31 @@ img{
   width: 500px;
 
   height: 100%;
+}
+
+div{
+  margin: 15px 17px;
+  color: #182b55;
+}
+
+h1, h2, h3{
+  color: #915901;
+}
+
+h4{
+  font-size: 20px;
+  margin: 12px;
+  color: #915901;
+}
+
+h5{
+  font-size: 17px;
+  margin: 8px 18px ;
+  color: #915901;
+}
+
+span{
+  display: block;
+  margin: 0 25px;
+  color: #182b55;
 }
